5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1637_1055.log
== TEST (2019-04-05 00:05:43) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = int(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r= (((v0**2)*(sin*(2*(radians(a)))/g)


print(r)
-- ERROR:
File "XXXX", line 10
    print(r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:07:01) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = int(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r= (((v0**2)*(sin*(2*(radians(a))))/g)


print(r)
-- ERROR:
File "XXXX", line 10
    print(r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:07:39) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = int(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r= ((v0**2)*(sin*(2*(radians(a))))/g)


print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '45.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:11:27) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = int(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r = (((v0**2)*(sin*(2*(radians(a))))/g)


print(r)
-- ERROR:
File "XXXX", line 10
    print(r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:11:57) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = float(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r = (((v0**2)*(sin*(2*(radians(a))))/g)

print(r)
-- ERROR:
File "XXXX", line 9
    print(r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:12:38) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = float(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r = (((v0**2)*(sin*(2*a)))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = (((v0**2)*(sin*(2*a)))/g)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:17:04) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = float(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r = (((v0**2)*(radians(sin)*(2*a)))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = (((v0**2)*(radians(sin)*(2*a)))/g)
TypeError: must be real number, not builtin_function_or_method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:20:09) 
-- CODE:
v0 = float(input("velocidade inicial:"))
a = float(input("angulo em graus:"))
D = float(input("distancia horizontal:"))
g = 9.8
from math import *

r = radians(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = radians(((v0**2)*sin*(2*a))/g)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:21:11) 
-- CODE:
v0 = int(input("velocidade inicial:"))
a = int(input("angulo em graus:"))
D = int(input("distancia horizontal:"))
g = 9.8
from math import *

r = radians(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v0 = int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:20:06) 
-- CODE:
vi = int(input("velocidade inicial:"))
a = radians(int(input("angulo em graus:")))
D = int(input("distancia horizontal:"))
g = 9.8
from math import *

r =(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi = int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:20:22) 
-- CODE:
vi = int(input("velocidade inicial:"))
a = radians(int(input("angulo em graus:")))
D = int(input("distancia horizontal:"))
g = 9.8
from math import *

r =(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi = int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:22:00) 
-- CODE:
from math import *
vi = int(input("velocidade inicial:"))
a = int(radians(input("angulo em graus:")))
D = int(input("distancia horizontal:"))
g = 9.8

r =(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vi = int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:22:47) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = float(radians(input("angulo em graus:")))
D = float(input("distancia horizontal:"))
g = 9.8

r =(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = float(radians(input()))
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:23:34) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
D = float(input("distancia horizontal:"))
g = 9.8

r =(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r =(((v0**2)*sin*(2*a))/g)
NameError: name 'v0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:27:48) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = float(input("distancia horizontal:"))
g = 9.8

r =(((v0**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r =(((v0**2)*sin*(2*a))/g)
NameError: name 'v0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:28:21) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = float(input("distancia horizontal:"))
g = 9.8

r =(((vi**2)*sin*(2*a))/g)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r =(((vi**2)*sin*(2*a))/g)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:35) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = float(input("distancia horizontal:"))
g = 9.8

r =(vi**2)*sin(2*a)/9.8

print(r)
-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:47:14) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =(vi**2)*sin(2*a)/g

if(R >= 0.1)
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.139005
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    if(R >= 0.1)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:47:31) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =(vi**2)*sin(2*a)/g

if(R >= 0.1)
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.151446
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    if(R >= 0.1)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:01) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =(vi**2)*sin(2*a)/g

if(R >= d - 0.1)
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.224574
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    if(R >= d - 0.1)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:49) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*sin(2*a)/g

if(R >= d - 0.1)
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.194122
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    if(R >= d - 0.1)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:02) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*sin(2*a)/g

if(r >= d - 0.1)
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.145409
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    if(r >= d - 0.1)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:04) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*sin(2*a)/g

if(r >= d - 0.1)
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.142127
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    if(r >= d - 0.1)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:05) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*sin(2*a)/g

if(r >= d - 0.1)
	print("nao")
else:
	print("sim")
-- ERROR:
File "XXXX", line 9
    if(r >= d - 0.1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:19) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*sin(2*a)/g

if(r >= d - 0.1):
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.222115
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:05) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*(sin(2*a))/g

if(r >= d - 0.1):
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.118363
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:43:09) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*(sin(2*a))/g

if(abs(d-r) <= 0.1):
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:43:32) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*(sin(2*a))/g

if(abs(d-r) <= 0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.118792
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:39:12) 
-- CODE:
from math import *
vi = float(input("velocidade inicial:"))
a = radians(float(input("angulo em graus:")))
d = abs(float(input("distancia horizontal:")))
g = 9.8

r =((vi)**2)*(sin(2*a))/g

if(abs(d-r) <= 0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.109837
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
